# regression

./: .gitignore  README.md  pyproject.toml
analysis/: 4_EDA_celltype_gene_expr_pseudobulk_raw_counts.ipynb  4_EDA_celltype_gene_expr_pseudobulk_raw_counts.py  4_EDA_celltype_gene_expr_pseudobulk_raw_counts_subsampling.py  4_EDA_celltype_gene_expr_pseudobulk_raw_counts_subsampling_many_celltypes.py  5_regression_use_package.ipynb  5_regression_use_package.py  5_regression_use_package_subsampling.py  7_iNMF_prepareXs.ipynb  8_3_1L_MLP_vs_pseudobulk_forloop.ipynb  8_3_1L_MLP_vs_pseudobulk_parallel.ipynb  8_3_MLP_ilr_training_refined_folds_forloop.ipynb  FOAM_blood.ipynb  README.md  pseudobulk_vs_MLP.ipynb  run_gene_selection.py  run_kfold.py  script_SLURM_design_matrix.sh  script_SLURM_mean_gene_expr.sh  script_SLURM_sampling_manycelltypes.sh
src/regression/: __init__.py  checkfitting.py  clustering.py  estimators.py  plotting.py  preprocessing.py  sampling.py
src/regression/.ipynb_checkpoints/: __init__-checkpoint.py  estimators-checkpoint.py  mixins-checkpoint.py  plotting-checkpoint.py  preprocessing-checkpoint.py
src/regression/neural_network/: __init__.py  autoencoder.py  checkfitting.py  data_utils.py  dataclass_models.py  ilr_torch.py  loss_hybrid.py  model_inspect.py  models.py  parallel.py  process_data.py  trainers.py
src/regression/tests/: test_build_xlist_from_samples.py  test_ilr_torch.py
tests/: .test_compositional_ilr.py.swp  test_compositional_ilr.py  test_ilr_torch.py
